edited the background-color on body, and fixed the white gaps.

--- a/assets/CSS/style.css
+++ b/assets/CSS/style.css
@@ -148,10 +148,13 @@ header {
 
 }
 
+body {
+    background-color: #e5e5e5;
+   }
 #announcements {
     height: 500px;
     margin-bottom: 100px;
-    background-color: #e5e5e5
+    background-color: #e5e5e5;
 }
 
 #big-header {
@@ -236,26 +239,5 @@ height: 300px;
     margin:0% 1%;
     }
     
-    @import url(https://fonts.googleapis.com/css?family=Montserrat:400,700);
-
-    body { background:rgb(30,30,40); }
-    form { max-width:420px; margin:50px auto; }
     
-    .feedback-input {
-      color:white;
-      font-family: Helvetica, Arial, sans-serif;
-      font-weight:500;
-      font-size: 18px;
-      border-radius: 5px;
-      line-height: 22px;
-      background-color: transparent;
-      border:2px solid #CC6666;
-      transition: all 0.3s;
-      padding: 13px;
-      margin-bottom: 15px;
-      width:100%;
-      box-sizing: border-box;
-      outline:0;
-    }
-
    
